make sure the in marker does not overlap with the regular queued nodes

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,6 +98,10 @@ button {
     flex: 1;
   }
 
+  &__elements-back {
+    margin-left: -$border-size;
+  }
+
   &__element {
     width: $size;
     height: $size;
